# mass-raytrace

./: .gitignore  Cargo.toml  README.md  cube.ply
src/: eve.rs  geom.rs  main.rs  material.rs  math.rs  obj_loader.rs  ply_loader.rs  scenes.rs  stl_loader.rs  texture.rs  world.rs
src/math/: generic.rs  simd.rs
src/scenes/: cornell.rs  eve.rs  lucy.rs  mario.rs  menger.rs  sphere_grid.rs
