[package]
name = "mass-raytrace"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
simd = ["packed_simd"]

[dependencies]
byteorder = "1.3.4"
fastrand = "1.4.0"
glium = "0.29"
image = "0.23.12"
num_cpus = "1.13.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }
winit = "0.24"

[profile.release]
debug = 2
