[package]
name = "mass-raytrace"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
simd = ["core_simd"]
denoise = ["oidn"]

[dependencies]
byteorder = "1.3.4"
fastrand = "1.4.0"
glium = "0.30"
image = "0.23.12"
num_cpus = "1.13.0"
core_simd = { git = "https://github.com/rust-lang/portable-simd.git", optional = true }
winit = "0.25"
oidn = { version = "1.4.1", optional = true }
libsm64 = { git = "https://github.com/nickmass/libsm64-rust.git" }
gilrs = "0.8.1"

[profile.release]
debug = 2
